--- a/style.css
+++ b/style.css
@@ -57,41 +57,34 @@ p{
     padding-left: 10%;
     padding-right: 10%;
 }
-ul {
+nav {
      background-color: #333333;
     color: #ff0099;
+   padding-right: 10%;
     padding-left: 10%;
-    padding-right: 10%;
+    height: 64;
      
-    
-    
 }
-.lista  ul{
 
- text-align: left;   
- padding-top: 10px; 
- padding-left: 10%;
-    padding-right: 10%;
+nav  ul{
+
+    float: right;  
+   
     
   
     
 }
-.lista li {
+nav li {
     display: inline;
     text-decoration: underline;
-    padding-right: 20px;
 }
-
-.lista li:first-child {
-    
-    padding-right: 1100px;
-    }
-
-    
+nav img{
+    padding-top: 16px;
+   
+}
 
 
 a{
-    padding-left: 10%;
-    padding-right: 10%;
+   
     color: #ff0099;
 }
